Add checkout dir to GOPATH

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -122,6 +122,7 @@ jobs:
           GPG_FINGERPRINT: 12B5D62C28F57592D1575BD51ED14C59E37DAC20
           PKG_SIGNING_KEY: ${{ secrets.SIGNING_KEY }}
           GO111MODULE: off
+          GOPATH: ${{ env.GITHUB_WORKSPACE }}
 
       - uses: actions/upload-artifact@v2
         with:
