--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -17,7 +17,7 @@ builds:
   - id: std-linux
 
     flags:
-      - -tags=goplugin
+      - -tags=goplugin -trimpath
     ldflags:
       - -X gateway.VERSION={{.Version}} -X gateway.commit={{.FullCommit}} -X gateway.buildDate={{.Date}} -X gateway.builtBy=goreleaser
     goos:
@@ -34,9 +34,8 @@ builds:
     goarch:
       - amd64
   - id: std-arm64
-
     flags:
-      - -tags=goplugin
+      - -tags=goplugin -trimpath
     ldflags:
       - -X gateway.VERSION={{.Version}} -X gateway.commit={{.FullCommit}} -X gateway.buildDate={{.Date}} -X gateway.builtBy=goreleaser
     env:
@@ -47,6 +46,8 @@ builds:
       - arm64
   # static builds strip symbols and do not allow plugins
   - id: static-amd64
+    flags:
+      - -trimpath
     ldflags:
       - -s -w -X gateway.VERSION={{.Version}} -X gateway.commit={{.FullCommit}} -X gateway.buildDate={{.Date}} -X gateway.builtBy=goreleaser
       - -linkmode external -extldflags -static
