--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -35,7 +35,7 @@ jobs:
   goreleaser:
     runs-on: ubuntu-latest
 
-    container: tykio/golang-cross:1.12
+    container: tykio/golang-cross:1.12.17
 
     outputs:
       tag: ${{ steps.targets.outputs.tag }}
@@ -112,6 +112,11 @@ jobs:
 
       - name: Fix vendor
         run: |
+          export GOPATH=/go
+          mkdir -p /go/src || true
+
+          whereis go
+
           echo "Moving vendor"
           mv -f vendor/* $GOPATH/src/
           rm -rf vendor
