--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -17,7 +17,7 @@ builds:
   - id: std-linux
 
     flags:
-      - -tags=goplugin -trimpath
+      - -tags=goplugin
     ldflags:
       - -X gateway.VERSION={{.Version}} -X gateway.commit={{.FullCommit}} -X gateway.buildDate={{.Date}} -X gateway.builtBy=goreleaser
     goos:
@@ -35,7 +35,7 @@ builds:
       - amd64
   - id: std-arm64
     flags:
-      - -tags=goplugin -trimpath
+      - -tags=goplugin
     ldflags:
       - -X gateway.VERSION={{.Version}} -X gateway.commit={{.FullCommit}} -X gateway.buildDate={{.Date}} -X gateway.builtBy=goreleaser
     env:
@@ -46,8 +46,6 @@ builds:
       - arm64
   # static builds strip symbols and do not allow plugins
   - id: static-amd64
-    flags:
-      - -trimpath
     ldflags:
       - -s -w -X gateway.VERSION={{.Version}} -X gateway.commit={{.FullCommit}} -X gateway.buildDate={{.Date}} -X gateway.builtBy=goreleaser
       - -linkmode external -extldflags -static
