--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -35,7 +35,7 @@ jobs:
   goreleaser:
     runs-on: ubuntu-latest
 
-    container: tykio/golang-cross:1.12
+    container: tykio/golang-cross:1.12.17
 
     outputs:
       tag: ${{ steps.targets.outputs.tag }}
@@ -110,10 +110,26 @@ jobs:
             *.txt.sig
             *.txt
 
+      - name: Fix vendor
+        run: |
+          export GOPATH=/go
+          mkdir -p /go/src || true
+
+          whereis go
+
+          echo "Moving vendor"
+          mv -f vendor/* $GOPATH/src/
+          rm -rf vendor
+          
+          # rm go.mod && rm go.sum
+          export GO111MODULE=off 
+          mkdir -p /go/src/github.com/TykTechnologies/tyk
+          cp -r ./* /go/src/github.com/TykTechnologies/tyk
+
       - uses: goreleaser/goreleaser-action@v2
         with:
           version: latest
-          args: release --rm-dist
+          args: release --rm-dist --skip-validate
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           CGO_ENABLED: 1
@@ -122,6 +138,7 @@ jobs:
           GPG_FINGERPRINT: 12B5D62C28F57592D1575BD51ED14C59E37DAC20
           PKG_SIGNING_KEY: ${{ secrets.SIGNING_KEY }}
           GO111MODULE: off
+#           GOPATH: ${{ env.GITHUB_WORKSPACE }}
 
       - uses: actions/upload-artifact@v2
         with:
