--- a/images/plugin-compiler/Dockerfile
+++ b/images/plugin-compiler/Dockerfile
@@ -1,6 +1,6 @@
 # Go version here should match https://github.com/TykTechnologies/golang-cross/blob/master/.github/workflows/release.yml#L16
 
-FROM golang:1.15.8-buster
+FROM golang:1.15.15-buster
 LABEL description="Image for plugin development"
 
 ARG TYK_GW_TAG
@@ -11,7 +11,7 @@ ENV PLUGIN_SOURCE_PATH=/plugin-source
 # This is the temporary path where the plugin will be built
 ENV PLUGIN_BUILD_PATH=/go/src/plugin-build
 
-RUN mkdir -p $TYK_GW_PATH $PLUGIN_SOURCE_PATH $PLUGIN_BUILD_PATH
+RUN mkdir -p $PLUGIN_SOURCE_PATH $PLUGIN_BUILD_PATH
 COPY images/plugin-compiler/data/build.sh /build.sh
 RUN chmod +x /build.sh
 
