--- a/.github/workflows/golangci-lint.yml
+++ b/.github/workflows/golangci-lint.yml
@@ -20,7 +20,7 @@ jobs:
         uses: golangci/golangci-lint-action@v2
         with:
           # Version of golangci-lint to use in form of v1.2 or `latest` to use the latest version
-          version: latest
+          version: v1.42.0
 
           # Optional: working directory, useful for monorepos
           # working-directory: somedir
