fetch base branch on pull request ci

--- a/.github/workflows/ci-tests.yml
+++ b/.github/workflows/ci-tests.yml
@@ -50,7 +50,9 @@ jobs:
           pip install setuptools
           pip install google
           pip install protobuf
-
+      - name: Fetch base branch
+        if: ${{ github.event_name == 'pull_request' }}
+        run: git fetch origin ${{ github.base_ref }}
       - name: Start Redis
         uses: supercharge/redis-github-action@1.2.0
         with:
