--- a/.github/workflows/ci-tests.yml
+++ b/.github/workflows/ci-tests.yml
@@ -114,6 +114,7 @@ jobs:
             -Dsonar.organization=tyktechnologies
             -Dsonar.projectKey=TykTechnologies_tyk
             -Dsonar.sources=.
+            -Dsonar.exclusions=**/*.java
             -Dsonar.coverage.exclusions=**/*_test.go
             -Dsonar.test.inclusions=**/*_test.go
             -Dsonar.tests=.
