--- a/images/hybrid/tyk/tyk.conf.example
+++ b/images/hybrid/tyk/tyk.conf.example
@@ -27,7 +27,7 @@
     "ignored_ips": []
   },
   "health_check": {
-    "enable_health_checks": true,
+    "enable_health_checks": false,
     "health_check_value_timeouts": 60
   },
   "optimisations_use_async_session_write": true,
