--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -349,7 +349,7 @@ jobs:
   packagecloud:
     if: needs.goreleaser.outputs.upload == 'true'
     needs:
-#       - smoke-tests
+      - smoke-tests
       - goreleaser
     runs-on: ubuntu-latest
 
