--- a/images/plugin-compiler/Dockerfile
+++ b/images/plugin-compiler/Dockerfile
@@ -8,10 +8,8 @@ ENV TYK_GW_PATH=/go/src/github.com/TykTechnologies/tyk
 # This directory will contain the plugin source and will be
 # mounted from the host box by the user using docker volumes
 ENV PLUGIN_SOURCE_PATH=/plugin-source
-# This is the temporary path where the plugin will be built
-ENV PLUGIN_BUILD_PATH=/go/src/plugin-build
 
-RUN mkdir -p $TYK_GW_PATH $PLUGIN_SOURCE_PATH $PLUGIN_BUILD_PATH
+RUN mkdir -p $TYK_GW_PATH $PLUGIN_SOURCE_PATH
 COPY images/plugin-compiler/data/build.sh /build.sh
 RUN chmod +x /build.sh
 
