Build go plugin from dynamically generated directory in GOPATH
create dynamic plugin directory from plugin name in /go/src

add plugin_id to build.sh

improve smoke tests

separate plugin-aliasing smoke test

docker compose logs when smoke test fails

--- a/images/plugin-compiler/Dockerfile
+++ b/images/plugin-compiler/Dockerfile
@@ -1,4 +1,4 @@
-# Go version here should match https://github.com/TykTechnologies/golang-cross/blob/<branch>/.github/workflows/release.yml#L38
+# Go version here should match https://github.com/TykTechnologies/golang-cross/blob/master/.github/workflows/release.yml#L16
 
 FROM golang:1.15-buster
 LABEL description="Image for plugin development"
@@ -7,10 +7,8 @@ ENV TYK_GW_PATH=/go/src/github.com/TykTechnologies/tyk
 # This directory will contain the plugin source and will be
 # mounted from the host box by the user using docker volumes
 ENV PLUGIN_SOURCE_PATH=/plugin-source
-# This is the temporary path where the plugin will be built
-ENV PLUGIN_BUILD_PATH=/go/src/plugin-build
 
-RUN mkdir -p $TYK_GW_PATH $PLUGIN_SOURCE_PATH $PLUGIN_BUILD_PATH
+RUN mkdir -p $TYK_GW_PATH $PLUGIN_SOURCE_PATH
 COPY images/plugin-compiler/data/build.sh /build.sh
 # COPY ./ $TYK_GW_PATH/
 # RUN cd $TYK_GW_PATH && go mod tidy && go mod vendor
