Checkpoint after pairing with Leo

--- a/images/plugin-compiler/Dockerfile
+++ b/images/plugin-compiler/Dockerfile
@@ -3,7 +3,6 @@
 FROM golang:1.15.15
 LABEL description="Image for plugin development"
 
-ARG TYK_GW_TAG
 ENV TYK_GW_PATH=/go/src/github.com/TykTechnologies/tyk
 # This directory will contain the plugin source and will be
 # mounted from the host box by the user using docker volumes
@@ -13,6 +12,8 @@ ENV PLUGIN_BUILD_PATH=/go/src/plugin-build
 
 RUN mkdir -p $TYK_GW_PATH $PLUGIN_SOURCE_PATH $PLUGIN_BUILD_PATH
 COPY images/plugin-compiler/data/build.sh /build.sh
+COPY ./ $TYK_GW_PATH/
+RUN cd $TYK_GW_PATH && go mod tidy && go mod vendor
 RUN chmod +x /build.sh
 
 ENTRYPOINT ["/build.sh"]
