--- a/Dockerfile.std
+++ b/Dockerfile.std
@@ -5,21 +5,20 @@
 # ./pr.zsh -title releng: oct updates -branch release-4.0 -base release-4.0 -repos tyk,tyk-analytics -p
 # m4 -E -DxREPO=tyk
 
-FROM debian:buster-slim
+FROM debian:bullseye-slim
 ARG TARGETARCH
 
 RUN apt-get update \
     && apt-get dist-upgrade -y ca-certificates
 
-RUN apt-get install -y python3-setuptools libpython3.7 python3.7-dev curl \
+RUN apt-get install -y python3-setuptools libpython3.9 python3.9-dev curl \
     && curl https://bootstrap.pypa.io/get-pip.py | python3 \
     && rm -rf /usr/include/* && rm /usr/lib/*-linux-gnu/*.a && rm /usr/lib/*-linux-gnu/*.o \
-    && rm /usr/lib/python3.7/config-3.7m-*-linux-gnu/*.a \
+    && rm /usr/lib/python3.*/config-3.*-linux-gnu/*.a \
     && pip3 install --only-binary ":all:" grpcio protobuf \
     && apt-get autoremove -y \
     && rm -rf /root/.cache \
     && rm -rf /var/lib/apt/lists/*
-
 
 COPY *${TARGETARCH}.deb /
 RUN dpkg -i /tyk-gateway*${TARGETARCH}.deb && rm /*.deb
