[TT-3916] Goplugins for release-4 (#3749)
* Update plugin build script with 3.0.x fixes

This is required on master, release-3-lts and release-4.0
* Restore smoke tests
* Support ComposeV2 in smoke test
* Still on buster as 1.15 is not available on bullseye
* Build go plugin from dynamically generated directory in GOPATH

Co-authored-by: Jeff <jeffy.mathew100@gmail.com>

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -35,7 +35,7 @@ jobs:
   goreleaser:
     runs-on: ubuntu-latest
 
-    container: tykio/golang-cross:1.15.15
+    container: tykio/golang-cross:1.15
 
     outputs:
       tag: ${{ steps.targets.outputs.tag }}
@@ -349,7 +349,7 @@ jobs:
   packagecloud:
     if: needs.goreleaser.outputs.upload == 'true'
     needs:
-#       - smoke-tests
+      - smoke-tests
       - goreleaser
     runs-on: ubuntu-latest
 
