renmae GW_VERSION to TYK_GW_TAG

--- a/images/plugin-compiler/Dockerfile
+++ b/images/plugin-compiler/Dockerfile
@@ -3,7 +3,7 @@
 FROM golang:1.15-buster
 LABEL description="Image for plugin development"
 
-ARG GW_VERSION
+ARG TYK_GW_TAG
 
 ENV TYK_GW_PATH=/go/src/github.com/TykTechnologies/tyk
 
@@ -13,15 +13,15 @@ ENV GO111MODULE=on
 # mounted from the host box by the user using docker volumes
 ENV PLUGIN_SOURCE_PATH=/plugin-source
 
-RUN mkdir -p  $PLUGIN_SOURCE_PATH
+RUN mkdir -p  $TYK_GW_PATH $PLUGIN_SOURCE_PATH
 
 COPY images/plugin-compiler/data/build.sh /build.sh
 # COPY ./ $TYK_GW_PATH/
 # RUN cd $TYK_GW_PATH && go mod tidy && go mod vendor
 RUN chmod +x /build.sh
 
-RUN mkdir -p $TYK_GW_PATH && cd $TYK_GW_PATH &&  \
-    git clone --depth 1 --branch $GW_VERSION  https://github.com/TykTechnologies/tyk . && \
+RUN cd $TYK_GW_PATH &&  \
+    git clone --depth 1 --branch $TYK_GW_TAG  https://github.com/TykTechnologies/tyk . && \
     go mod vendor
 
 ENTRYPOINT ["/build.sh"]
