--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -12,9 +12,9 @@
 # - macOS (only 10.15 is supported)
 # - amd64
 
-before:
-  hooks:
-  - go mod tidy
+#before:
+#  hooks:
+#  - go mod tidy
   
 builds:
   - id: std-linux
@@ -197,6 +197,7 @@ dockers:
     - "--label=org.opencontainers.image.title=tyk-plugin-compiler"
     - "--label=org.opencontainers.image.revision={{.FullCommit}}"
     - "--label=org.opencontainers.image.version={{.Version}}"
+    - "--build-arg=TYK_GW_TAG={{ .Tag }}"
   goarch: amd64
   goos: linux
   dockerfile: images/plugin-compiler/Dockerfile
