--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -194,6 +194,7 @@ dockers:
     - "--label=org.opencontainers.image.title=tyk-plugin-compiler"
     - "--label=org.opencontainers.image.revision={{.FullCommit}}"
     - "--label=org.opencontainers.image.version={{.Version}}"
+    - "--build-arg=TYK_GW_TAG={{ .Tag }}"
   goarch: amd64
   goos: linux
   dockerfile: images/plugin-compiler/Dockerfile
