restore smoke tests

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -320,6 +320,35 @@ jobs:
           file: Dockerfile
           push: false
 
+  smoke-tests:
+    if: needs.goreleaser.outputs.upload == 'true'
+    needs:
+      - goreleaser
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v2
+        with:
+          fetch-depth: 1
+
+      - name: Run tests
+        shell: bash
+        run: |
+          set -eaxo pipefail
+          if [ ! -d integration/smoke-tests ]; then
+             echo "::warning No smoke tests defined"
+             exit 0
+          fi
+          for d in integration/smoke-tests/*/
+          do
+              echo Attempting to test $d
+              if [ -d $d ]; then
+                  cd $d
+                  ./test.sh ${{ needs.goreleaser.outputs.tag }}
+                  cd -
+              fi
+          done
+
   packagecloud:
     if: needs.goreleaser.outputs.upload == 'true'
     needs:
