--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -40,10 +40,20 @@ jobs:
       fail-fast: false
       matrix:
         golang_cross: [ 1.15, 1.15-el7 ]
+        include:
+          - golang_cross: 1.15-el7
+            skip_push: true
+            rpmvers: 'el/7'
+            debvers: 'ubuntu/xenial'
+          - golang_cross: 1.15
+            skip_push: false
+            rpmvers: 'el/8'
+            debvers: 'ubuntu/bionic ubuntu/focal debian/jessie'
+
     container: 'tykio/golang-cross:${{ matrix.golang_cross }}'
     env:
       GOLANG_CROSS: ${{ matrix.golang_cross }}
-
+      SKIP_DOCKER_PUSH: ${{ matrix.skip_push }}
     outputs:
       tag: ${{ steps.targets.outputs.tag }}
       upload: ${{ steps.targets.outputs.upload }}
@@ -378,10 +388,20 @@ jobs:
       - smoke-tests
       - goreleaser
     runs-on: ubuntu-latest
+    # temporary until this job is merged into jobs.goreleaser
     strategy:
       fail-fast: false
       matrix:
-        golang_cross: [1.15, 1.15-el7]
+        golang_cross: [ 1.15, 1.15-el7 ]
+        include:
+          - golang_cross: 1.15-el7
+            skip_push: true
+            rpmvers: 'el/7'
+            debvers: 'ubuntu/xenial'
+          - golang_cross: 1.15
+            skip_push: false
+            rpmvers: 'el/8'
+            debvers: 'ubuntu/bionic ubuntu/focal debian/jessie'
 
     steps:
       - uses: actions/download-artifact@v2
@@ -402,8 +422,8 @@ jobs:
         with:
           repo: tyk/${{ needs.goreleaser.outputs.pc }}
           dir: dist
-          rpmvers: ${{ matrix.golang_cross == '1.15-el7' && 'el/7' || 'el/8' }}
-          debvers: ${{ matrix.golang_cross == '1.15-el7' && 'ubuntu/xenial' || 'ubuntu/bionic ubuntu/focal debian/jessie' }}
+          rpmvers: ${{ matrix.rpmvers }}
+          debvers: ${{ matrix.debvers }}
 
       - name: Tell release channel
         if: always()
