--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -78,6 +78,7 @@ dockers:
     - "policies"
     - "coprocess"
     - "tyk.conf.example"
+  skip_push: {{ if .Env.SKIP_DOCKER_PUSH == 'true' }}true{{ else }}false{{ end }}
 
 # Build tykio/xDH_REPO, cloudsmith/xCOMPATIBILITY_NAME (arm64)
 - ids:
@@ -108,6 +109,7 @@ dockers:
     - "policies"
     - "coprocess"
     - "tyk.conf.example"
+  skip_push: {{ if .Env.SKIP_DOCKER_PUSH == 'true' }}true{{ else }}false{{ end }}
 
 - ids:
     - static-amd64
@@ -137,6 +139,7 @@ dockers:
     - "policies"
     - "coprocess"
     - "tyk.conf.example"
+  skip_push: {{ if .Env.SKIP_DOCKER_PUSH == 'true' }}true{{ else }}false{{ end }}
 
 # Build gateway hybrid container amd64
 - ids:
@@ -155,6 +158,7 @@ dockers:
   dockerfile: images/hybrid/Dockerfile
   extra_files:
     - "images/hybrid/"
+  skip_push: {{ if .Env.SKIP_DOCKER_PUSH == 'true' }}true{{ else }}false{{ end }}
 
 # Build gateway hybrid container arm64
 - ids:
@@ -173,12 +177,13 @@ dockers:
   dockerfile: images/hybrid/Dockerfile
   extra_files:
     - "images/hybrid/"
+  skip_push: {{ if .Env.SKIP_DOCKER_PUSH == 'true' }}true{{ else }}false{{ end }}
 
 # Build plugin-compiler multiarch
 - ids:
     - std
   image_templates:
-    - "tykio/tyk-plugin-compiler:{{ .Tag }}"
+    - "tykio/tyk-plugin-compiler{{ if .Env.SKIP_DOCKER_PUSH == 'true' }}-el7{{ end }}:{{ .Tag }}"
     - "tykio/tyk-plugin-compiler:v{{ .Major }}.{{ .Minor }}{{.Prerelease}}"
   build_flag_templates:
     - "--label=org.opencontainers.image.created={{.Date}}"
@@ -193,6 +198,7 @@ dockers:
   extra_files:
     - "images/plugin-compiler/"
     - "go.mod"
+  skip_push: {{ if .Env.SKIP_DOCKER_PUSH == 'true' }}true{{ else }}false{{ end }}
 
 docker_manifests:
   - name_template: tykio/tyk-gateway:{{ .Tag }}
@@ -216,8 +222,7 @@ nfpms:
     homepage: "https://tyk.io"
     maintainer: "Tyk <info@tyk.io>"
     description: Tyk API Gateway
-    package_name: tyk-gateway
-    file_name_template: "{{ .PackageName }}-{{.Env.GOLANG_CROSS}}_{{ .Version }}_{{ .Os }}_{{ .Arch }}{{ if .Arm }}v{{ .Arm }}{{ end }}{{ if .Mips }}_{{ .Mips }}{{ end }}"
+    package_name: tyk-gateway\
     builds:
 
       - std-linux
