--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -51,9 +51,6 @@ jobs:
             debvers: 'ubuntu/bionic ubuntu/focal debian/jessie'
 
     container: 'tykio/golang-cross:${{ matrix.golang_cross }}'
-    env:
-      GOLANG_CROSS: ${{ matrix.golang_cross }}
-      EL7: ${{ matrix.el7 }}
     outputs:
       tag: ${{ steps.targets.outputs.tag }}
       upload: ${{ steps.targets.outputs.upload }}
@@ -157,6 +154,12 @@ jobs:
           NFPM_PAYG_PASSPHRASE: ${{ secrets.SIGNING_KEY_PASSPHRASE }}
           GPG_FINGERPRINT: 12B5D62C28F57592D1575BD51ED14C59E37DAC20
           PKG_SIGNING_KEY: ${{ secrets.SIGNING_KEY }}
+          GOLANG_CROSS: ${{ matrix.golang_cross }}
+          EL7: ${{ matrix.el7 }}
+          DEBVERS: ${{ matrix.debvers }}
+          RPMVERS: ${{ matrix.rpmvers }}
+          REPO: tyk/tyk-gateway-unstable
+          PACKAGECLOUD_TOKEN: ${{ secrets.PACKAGECLOUD_TOKEN }}
 
       - uses: actions/upload-artifact@v2
         with:
